# dune-example

./: dune-project  mylib.opam
